# mitama-dimensional

./: .gitmodules  404.html  CHANGELOG.md  CMakeLists.txt  CONTRIBUTION.html  LICENSE  README.md  index.html  mitama_build.sh  mkdocs.yml  search_index.json  sitemap.xml
src/: a.out  (+3 more)
src/wizarding-currency/: CMakeLists.txt  main.cpp  wizarding_currency.hpp
tests/arithmetic-tests/addition-type-check-tests/: CMakeLists.txt  addition-type-check-tests.cpp
tests/arithmetic-tests/addition-value-check-tests/: CMakeLists.txt  addition-value-check-tests.cpp
tests/arithmetic-tests/conversion-factor-tests/: CMakeLists.txt  conversion-factor-tests.cpp
tests/arithmetic-tests/division-tests/: CMakeLists.txt  division-tests.cpp
tests/arithmetic-tests/multiply-tests/: CMakeLists.txt  multiply-tests.cpp
tests/arithmetic-tests/subtraction-tests/: CMakeLists.txt  subtraction-tests.cpp
tests/derived-unit-tests/: CMakeLists.txt  derived-unit-tests.cpp
tests/format-io-tests/: CMakeLists.txt  cmake-gen.sh  derived-test-gen.sh  format_io_common.hpp  named-test-gen.sh
tests/format-io-tests/absorbed_dose-tests/: CMakeLists.txt  absorbed_dose-tests.cpp
tests/format-io-tests/absorbed_dose_rate-tests/: CMakeLists.txt  absorbed_dose_rate-tests.cpp
tests/format-io-tests/acceleration-tests/: CMakeLists.txt  acceleration-tests.cpp
tests/format-io-tests/action-tests/: CMakeLists.txt  action-tests.cpp
tests/format-io-tests/angle-tests/: CMakeLists.txt  angle-tests.cpp
tests/format-io-tests/angular_acceleration-tests/: CMakeLists.txt  angular_acceleration-tests.cpp
tests/format-io-tests/angular_momentum-tests/: CMakeLists.txt  angular_momentum-tests.cpp
tests/format-io-tests/angular_velocity-tests/: CMakeLists.txt  angular_velocity-tests.cpp
tests/format-io-tests/area-tests/: CMakeLists.txt  area-tests.cpp
tests/format-io-tests/area_density-tests/: CMakeLists.txt  area_density-tests.cpp
tests/format-io-tests/capacitance-tests/: CMakeLists.txt  capacitance-tests.cpp
tests/format-io-tests/catalytic_activity-tests/: CMakeLists.txt  catalytic_activity-tests.cpp
tests/format-io-tests/catalytic_efficiency-tests/: CMakeLists.txt  catalytic_efficiency-tests.cpp
tests/format-io-tests/compressibility-tests/: CMakeLists.txt  compressibility-tests.cpp
tests/format-io-tests/conductance-tests/: CMakeLists.txt  conductance-tests.cpp
tests/format-io-tests/crackle-tests/: CMakeLists.txt  crackle-tests.cpp
tests/format-io-tests/curvature-tests/: CMakeLists.txt  curvature-tests.cpp
tests/format-io-tests/density-tests/: CMakeLists.txt  density-tests.cpp
tests/format-io-tests/diffusion_coefficient-tests/: CMakeLists.txt  diffusion_coefficient-tests.cpp
tests/format-io-tests/dynamic_viscosity-tests/: CMakeLists.txt  dynamic_viscosity-tests.cpp
tests/format-io-tests/electoric_potential-tests/: CMakeLists.txt  electoric_potential-tests.cpp
tests/format-io-tests/electric_charge-tests/: CMakeLists.txt  electric_charge-tests.cpp
tests/format-io-tests/electric_charge_density-tests/: CMakeLists.txt  electric_charge_density-tests.cpp
tests/format-io-tests/electric_current_density-tests/: CMakeLists.txt  electric_current_density-tests.cpp
tests/format-io-tests/electric_displacement_field-tests/: CMakeLists.txt  electric_displacement_field-tests.cpp
tests/format-io-tests/electric_field_strength-tests/: CMakeLists.txt  electric_field_strength-tests.cpp
tests/format-io-tests/electric_potential-tests/: CMakeLists.txt  electric_potential-tests.cpp
tests/format-io-tests/electrical_conductivity-tests/: CMakeLists.txt  electrical_conductivity-tests.cpp
tests/format-io-tests/electron_mobility-tests/: CMakeLists.txt  electron_mobility-tests.cpp
tests/format-io-tests/energy-tests/: CMakeLists.txt  energy-tests.cpp
tests/format-io-tests/energy_density-tests/: CMakeLists.txt  energy_density-tests.cpp
tests/format-io-tests/energy_flux_density-tests/: CMakeLists.txt  energy_flux_density-tests.cpp
tests/format-io-tests/entropy-tests/: CMakeLists.txt  entropy-tests.cpp
tests/format-io-tests/equivalent_dose-tests/: CMakeLists.txt  equivalent_dose-tests.cpp
tests/format-io-tests/exposure-tests/: CMakeLists.txt  exposure-tests.cpp
tests/format-io-tests/force-tests/: CMakeLists.txt  force-tests.cpp
tests/format-io-tests/frequency-tests/: CMakeLists.txt  frequency-tests.cpp
tests/format-io-tests/frequency_drift-tests/: CMakeLists.txt  frequency_drift-tests.cpp
tests/format-io-tests/fuel_efficiency-tests/: CMakeLists.txt  fuel_efficiency-tests.cpp
tests/format-io-tests/heat-tests/: CMakeLists.txt  heat-tests.cpp
tests/format-io-tests/heat_capacity-tests/: CMakeLists.txt  heat_capacity-tests.cpp
tests/format-io-tests/heat_flux_density-tests/: CMakeLists.txt  heat_flux_density-tests.cpp
tests/format-io-tests/illuminance-tests/: CMakeLists.txt  illuminance-tests.cpp
tests/format-io-tests/impedance-tests/: CMakeLists.txt  impedance-tests.cpp
tests/format-io-tests/impulse-tests/: CMakeLists.txt  impulse-tests.cpp
tests/format-io-tests/inductance-tests/: CMakeLists.txt  inductance-tests.cpp
tests/format-io-tests/irradiance-tests/: CMakeLists.txt  irradiance-tests.cpp
tests/format-io-tests/jerk-tests/: CMakeLists.txt  jerk-tests.cpp
tests/format-io-tests/kinematic_viscosity-tests/: CMakeLists.txt  kinematic_viscosity-tests.cpp
tests/format-io-tests/linear_charge_density-tests/: CMakeLists.txt  linear_charge_density-tests.cpp
tests/format-io-tests/linear_mass_density-tests/: CMakeLists.txt  linear_mass_density-tests.cpp
tests/format-io-tests/luminance-tests/: CMakeLists.txt  luminance-tests.cpp
tests/format-io-tests/luminous_efficacy-tests/: CMakeLists.txt  luminous_efficacy-tests.cpp
tests/format-io-tests/luminous_energy-tests/: CMakeLists.txt  luminous_energy-tests.cpp
tests/format-io-tests/luminous_exposure-tests/: CMakeLists.txt  luminous_exposure-tests.cpp
tests/format-io-tests/luminous_flux-tests/: CMakeLists.txt  (+1 more)
tests/nonsi-unit-tests/: CMakeLists.txt  nonsi-unit-tests.cpp
tests/static-quantity-tests/: CMakeLists.txt  static-quantity-tests.cpp
(+1042 files in other folders)
