
add_subdirectory(absorbed_dose-tests)
add_subdirectory(absorbed_dose_rate-tests)
add_subdirectory(acceleration-tests)
add_subdirectory(action-tests)
add_subdirectory(angle-tests)
add_subdirectory(angular_acceleration-tests)
add_subdirectory(angular_momentum-tests)
add_subdirectory(angular_velocity-tests)
add_subdirectory(area-tests)
add_subdirectory(area_density-tests)
add_subdirectory(capacitance-tests)
add_subdirectory(catalytic_activity-tests)
add_subdirectory(catalytic_efficiency-tests)
add_subdirectory(compressibility-tests)
add_subdirectory(conductance-tests)
add_subdirectory(crackle-tests)
add_subdirectory(curvature-tests)
add_subdirectory(density-tests)
add_subdirectory(diffusion_coefficient-tests)
add_subdirectory(dynamic_viscosity-tests)
add_subdirectory(electoric_potential-tests)
add_subdirectory(electric_charge-tests)
add_subdirectory(electric_charge_density-tests)
add_subdirectory(electric_current_density-tests)
add_subdirectory(electric_displacement_field-tests)
add_subdirectory(electric_field_strength-tests)
add_subdirectory(electric_potential-tests)
add_subdirectory(electrical_conductivity-tests)
add_subdirectory(electron_mobility-tests)
add_subdirectory(energy-tests)
add_subdirectory(energy_density-tests)
add_subdirectory(energy_flux_density-tests)
add_subdirectory(entropy-tests)
add_subdirectory(equivalent_dose-tests)
add_subdirectory(exposure-tests)
add_subdirectory(force-tests)
add_subdirectory(frequency-tests)
add_subdirectory(frequency_drift-tests)
add_subdirectory(fuel_efficiency-tests)
add_subdirectory(heat-tests)
add_subdirectory(heat_capacity-tests)
add_subdirectory(heat_flux_density-tests)
add_subdirectory(illuminance-tests)
add_subdirectory(impedance-tests)
add_subdirectory(impulse-tests)
add_subdirectory(inductance-tests)
add_subdirectory(irradiance-tests)
add_subdirectory(jerk-tests)
add_subdirectory(kinematic_viscosity-tests)
add_subdirectory(linear_charge_density-tests)
add_subdirectory(linear_mass_density-tests)
add_subdirectory(luminance-tests)
add_subdirectory(luminous_efficacy-tests)
add_subdirectory(luminous_energy-tests)
add_subdirectory(luminous_exposure-tests)
add_subdirectory(luminous_flux-tests)
add_subdirectory(magnetic_dipole_moment-tests)
add_subdirectory(magnetic_field_strength-tests)
add_subdirectory(magnetic_flux-tests)
add_subdirectory(magnetic_flux_density-tests)
add_subdirectory(magnetic_moment-tests)
add_subdirectory(magnetic_reluctance-tests)
add_subdirectory(magnetic_rigidity-tests)
add_subdirectory(magnetic_susceptibility-tests)
add_subdirectory(magnetic_vector_potential-tests)
add_subdirectory(magnetization-tests)
add_subdirectory(magnetomotive_force-tests)
add_subdirectory(mass_flow_rate-tests)
add_subdirectory(molality-tests)
add_subdirectory(molar_conductivity-tests)
add_subdirectory(molar_energy-tests)
add_subdirectory(molar_entropy-tests)
add_subdirectory(molar_heat_capacity-tests)
add_subdirectory(molar_mass-tests)
add_subdirectory(molar_volume-tests)
add_subdirectory(molarity-tests)
add_subdirectory(moment_of_inertia-tests)
add_subdirectory(momentum-tests)
add_subdirectory(nonsi-tests)
add_subdirectory(optical_power-tests)
add_subdirectory(permeability-tests)
add_subdirectory(permittivity-tests)
add_subdirectory(polarization_density-tests)
add_subdirectory(pop-tests)
add_subdirectory(power-tests)
add_subdirectory(power_density-tests)
add_subdirectory(pressure-tests)
add_subdirectory(radiance-tests)
add_subdirectory(radiant_exposure-tests)
add_subdirectory(radiant_flux-tests)
add_subdirectory(radiant_intensity-tests)
add_subdirectory(radioactivity-tests)
add_subdirectory(reactance-tests)
add_subdirectory(resistance-tests)
add_subdirectory(resistivity-tests)
add_subdirectory(si-basics-tests)
add_subdirectory(snap-tests)
add_subdirectory(solid_angle-tests)
add_subdirectory(spatial_frequency-tests)
add_subdirectory(specific_angular_momentum-tests)
add_subdirectory(specific_energy-tests)
add_subdirectory(specific_entropy-tests)
add_subdirectory(specific_heat_capacity-tests)
add_subdirectory(specific_volume-tests)
add_subdirectory(spectral_intensity-tests)
add_subdirectory(spectral_irradiance-tests)
add_subdirectory(spectral_power-tests)
add_subdirectory(spectral_radiance-tests)
add_subdirectory(surface_tension-tests)
add_subdirectory(temperature_gradient-tests)
add_subdirectory(thermal_conductivity-tests)
add_subdirectory(thermal_diffusivity-tests)
add_subdirectory(thermal_expansion_coefficient-tests)
add_subdirectory(thermal_resistance-tests)
add_subdirectory(torque-tests)
add_subdirectory(velocity-tests)
add_subdirectory(voltage-tests)
add_subdirectory(volume-tests)
add_subdirectory(volumetric_flow-tests)
add_subdirectory(wavenumber-tests)
add_subdirectory(weight-tests)
add_subdirectory(work-tests)
